--- a/style.css
+++ b/style.css
@@ -1,18 +1,34 @@
+
 * {
   box-sizing: border-box;
 }
+
 .btn {
   border: 3px solid black;
-  background-color: white;
+  background-color: rgb(255, 0, 0);
   padding: 10px 15px;
   border-radius: 8px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 700;
   font-size: 20px;
 
+  position: relative;
+}
+.btn span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  z-index: -1;
+
+  width: 0%;
   transition: all 300ms;
+
+  background-color: rgb(0, 89, 255);
 }
 .btn:hover {
-  background-color: black;
   color: white;
+}
+.btn:hover span {
+  width: 100%;
 }
