--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 .btn {
   border: 3px solid black;
-  background-color: rgb(255, 0, 0);
+  background-color: transparent;
   padding: 10px 15px;
   border-radius: 8px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -14,7 +14,9 @@
 
   position: relative;
 }
-.btn span {
+.btn::before {
+  display: block;
+  content: " ";
   position: absolute;
   top: 0;
   left: 0;
@@ -22,13 +24,14 @@
   z-index: -1;
 
   width: 0%;
-  transition: all 300ms;
+  transition: all 500ms;
 
-  background-color: rgb(0, 89, 255);
+  background-color: rgb(0, 0, 0);
 }
 .btn:hover {
   color: white;
+  transition: all 500ms;
 }
-.btn:hover span {
+.btn:hover::before{
   width: 100%;
 }
